# neoCrim

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs
src/config/: default.rs  mod.rs  settings.rs
src/editor/: buffer.rs  clipboard.rs  cursor.rs  mod.rs  modes.rs  selection.rs
src/file/: io.rs  mod.rs  watcher.rs
src/input/: commands.rs  events.rs  keybindings.rs  mod.rs
src/syntax/: mod.rs
src/ui/: mod.rs  renderer.rs  terminal.rs  theme.rs  theme_manager.rs  themes.rs
src/ui/components/: command_line.rs  editor_view.rs  file_explorer.rs  mod.rs  status_line.rs  terminal.rs
src/utils/: text.rs
themes/: cyberpunk.nctheme  dark.nctheme  dracula.nctheme  glass_dark.nctheme  light.nctheme  monokai.nctheme  nord.nctheme  solarized_dark.nctheme
