[package]
name = "neocrim"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
unicode-width = "0.1"
ropey = "1.6"
syntect = "5.0"
dirs = "5.0"
tempfile = "3.20.0"
